; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_vector.c_remove_ones.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_vector.c_remove_ones.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i8*)* @remove_ones to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_ones(i32* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = call i32 @GIT_UNUSED(i8* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i8* @git_vector_get(i32* %9, i64 %10)
  %12 = icmp eq i8* %11, inttoptr (i64 1 to i8*)
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i8* @git_vector_get(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
